--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@typechain/ethers-v5": "^10.2.0",
     "@typechain/hardhat": "^6.1.5",
     "chai": "^4.3.4",
+    "eslint-scope": "^7.1.1",
     "ethers": "^5.5.3",
     "hardhat-gas-reporter": "^1.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "semver": "^7.3.8",
     "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
