--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@typechain/ethers-v5": "^10.2.0",
     "@typechain/hardhat": "^6.1.5",
+    "axios": "^1.2.2",
     "chai": "^4.3.4",
+    "dotenv": "^16.0.3",
     "eslint-scope": "^7.1.1",
     "ethers": "^5.5.3",
     "hardhat-gas-reporter": "^1.0.9",
+    "pinata-sdk": "^0.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
