--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.5",
     "semver": "^7.3.8",
     "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
