--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@typechain/ethers-v5": "^10.2.0",
     "@typechain/hardhat": "^6.1.5",
     "axios": "^1.2.2",
+    "bootstrap": "^5.2.3",
     "chai": "^4.3.4",
     "dotenv": "^16.0.3",
     "eslint-scope": "^7.1.1",
